@@ -42,14 +42,18 @@
 ## Update directory log with new records and remove 
 ## records that are missing from filesystem 
 #
-#@MACRO:dirlog-update:{m:exe} -r -u --postexec "{exe} --check --fix --ghost -v"
+#@MACRO:dirlog-update:{m:exe} -r -u --postexec "{exe} --check --fix --ghost -v {m:arg2}" {m:arg1}
+#
+#@MACRO:dirlog-update-skipempty:{m:exe} -r -u --lom "size = 0 && files = 0" --postexec "{exe} --check --fix --ghost -v {m:arg2}" {m:arg1}
 #
 ## <dirlog-full-update>
 #
 ## Update directory log with new records and remove 
 ## records that are missing from filesystem 
 #
-#@MACRO:dirlog-full-update:{m:exe} -r -u --full --postexec "{exe} --check --fix --ghost -v"
+#@MACRO:dirlog-full-update:{m:exe} -r -u --full --postexec "{m:exe} --check --fix --ghost -v {m:arg2}" {m:arg1}
+#
+#@MACRO:dirlog-full-update-skipempty:{m:exe} -r -u --full --lom "size = 0 && files = 0" --postexec "{m:exe} --check --fix --ghost -v {m:arg2}" {m:arg1}
 #
 ## <dupe>
 #
